--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swiper": "^10.3.1",
+    "react-router-dom": "^6.16.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
