--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@brancol/react-snackbar": "^0.3.0",
+    "@supabase/supabase-js": "^2.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^10.3.1",
     "react-router-dom": "^6.16.0",
+    "swiper": "^10.3.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
